@@ -1,4 +1,5 @@
 0.1-81
+- plot.ctd(): add more plot types (and re-used which=9 for salinity, not density)
 - improve flexibilty of 'as.ctd()'
 - add 'newdata' argument to predict.tidem()
 - add adv.2enu()
